<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollView01"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true" >

    <LinearLayout
        android:id="@+id/LinearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp"
        tools:context=".MainActivity" >

        <EditText
            android:id="@+id/etxHash"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:gravity="center_vertical|center_horizontal"
            android:hint="@string/enter_bios_hash"
            android:inputType="text"
            android:typeface="monospace"
            android:visibility="visible" >

            <requestFocus />
        </EditText>

        <Button
            android:id="@+id/btnGenerate"
            style="@android:attr/buttonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="generatePasswords"
            android:text="@string/generate_master_password"
            android:visibility="visible" />

        <Button
            android:id="@+id/btnMasterPasswords"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="showMasterPasswords"
            android:text="@string/master_passwords" />
    </LinearLayout>

</ScrollView>